--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -13,4 +13,4 @@
 
 </html>
 
-# O block é uma extensão do html do projeto, usando as mesmas partes do seu HTML em diferentes páginas do seu site.
+<!--O block é uma extensão do html do projeto, usando as mesmas partes do seu HTML em diferentes páginas do seu site.-->
